[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = ["nyabine <nilierine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = {extras = ["standart"], version = "^0.25.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
